# ROBOTICA25_26

./: robocomp
ACTIVIDAD3/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  localiser.cdsl
ACTIVIDAD3/.cmake/api/v1/reply/: cache-v2-a2c7db62e342aca7e621.json  cmakeFiles-v1-072c0c206d1cd1c6eb11.json  codemodel-v2-4a26ae3bf3083bd0f43c.json  directory-.-Debug-20ed7df20e6cef846a86.json  directory-generated-Debug-04a73bf2e8cd9edbcf9f.json  index-2025-11-13T14-41-22-0983.json  target-ICES__home_usuario_Escritorio_Actividad3_Daniel_Juanan_MiguelFelipe-20251112T144418Z-1-001_Actividad2_Danie-b3b1ffb22a5e04945071.json  target-localiser-Debug-810d67c64d22b6639af0.json
ACTIVIDAD3/.qt/: QtDeploySupport.cmake
ACTIVIDAD3/etc/: config
ACTIVIDAD3/src/: CMakeLists.txt  door_detector.cpp  nominal_room.h  specificworker.cpp  specificworker.h  time_series_plotter.cpp
Actividad2_Daniel_Juanan_MiguelFelipe/.qt/: QtDeploySupport.cmake
Actividad2_Daniel_Juanan_MiguelFelipe/src/: CMakeLists.txt  specificworker.cpp  specificworker.h
